Fixed Model Name

--- a/Tesi_3_2_Autoencoder.ipynb
+++ b/Tesi_3_2_Autoencoder.ipynb
@@ -9,7 +9,7 @@
         "d3-ITpNnp9vR"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOxyxHdTRcI00xcnpjR9MQs",
+      "authorship_tag": "ABX9TyMwCyRpgMuZyBXag/QCJ2aQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -872,7 +872,7 @@
         "    Name = Name + \"_\" + Mode + \".csv\"\n",
         "    \n",
         "    global path_model\n",
-        "    path_model=Name.replace(\".csv\",\".h5\")\n",
+        "    path_model=Name.replace(\".csv\",\"_model.h5\")\n",
         "\n",
         "    trials = Trials()\n",
         "    fmin(hyperopt_fcn, optimizable_variable, trials=trials, algo=tpe.suggest, max_evals=param[\"hyper_opt_evals\"])\n",
@@ -898,7 +898,7 @@
       "metadata": {
         "id": "s5dXr--PuhcM",
         "colab_type": "code",
-        "outputId": "dc312075-79bd-4cbe-e317-2790fdf8af9b",
+        "outputId": "93d4ee88-bb90-451a-af4c-7bf3ffe99d62",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -907,9 +907,9 @@
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
-        "!cp -r \"/content/drive/My Drive/dataset2/res/8/\" /content #path for the dataset or pickle files\n"
+        "!cp -r \"/content/drive/My Drive/dataset2/ds/\" /content #path for the dataset or pickle files\n"
       ],
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -946,7 +946,7 @@
         "# Parameters\n",
         "param = {\"Max_A_Size\": 8, \"Max_B_Size\": 8, \"Dynamic_Size\": False, 'Metod': 'tSNE', \"ValidRatio\": 0.1, \"seed\": 180,\n",
         "          \"dir\": \"/content/8/\", \"Mode\": \"CNN_Nature\",  # Mode : CNN_Nature, CNN2    | DIR: local working directory\n",
-        "          \"res\":\"/content/drive/My Drive/dataset2/res/8/\",#remote path for saving data \n",
+        "          \"res\":\"/content/drive/My Drive/dataset2/res/\",#remote path for saving data \n",
         "          \"LoadFromJson\": True, \"mutual_info\": False, # LoadFromJson: True: load pickle files (images)\n",
         "          #MOVE Ytrain.pickle and Ytest.pickle to the working directory after generating the images\n",
         "          \"hyper_opt_evals\": 50, \"epoch\": 40, \"No_0_MI\": False,  # True -> Removing 0 MI Features\n",
